2022-12-07T16:14:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640705328 # 683
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 58 149
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 59 150
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-12-07]

2022-12-07T08:13:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3637034696 # 682
* notice: last 14d: unq all: 5 7
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 57 147
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 58 149
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-12-07]

2022-12-05T16:14:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3621874375 # 677
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 56 146
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 57 147
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-12-05]

2022-12-04T00:54:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3610987536 # 672
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 55 145
* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 56 146
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-12-03]

2022-12-02T16:13:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3603282733 # 668