@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-07T16:14:09Z",
+  "timestamp" : "2022-12-08T16:14:20Z",
   "count_outdated" : 142,
   "uniques_outdated" : 53,
-  "count" : 150,
-  "uniques" : 59,
+  "count" : 151,
+  "uniques" : 60,
   "views" : [
     {
       "timestamp": "2022-11-27T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-12-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
