@@ -1,3 +1,11 @@
+2022-12-08T16:14:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3650052514 # 686
+* notice: last 14d: unq all: 7 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 59 150
+* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 60 151
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-12-08]
+
 2022-12-07T16:14:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640705328 # 683
 * notice: last 14d: unq all: 6 8
